[package]
name = "fo_save_format"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2024"

[dependencies]
bytemuck.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serdebug.workspace = true
bincode.workspace = true

[dev-dependencies]
ron.workspace = true
serde_json.workspace = true

[workspace]
members = ["cli"]

[workspace.dependencies]
bytemuck = { version = "1.22", features = [
    "derive",
    "min_const_generics",
    "extern_crate_alloc",
    "must_cast",
] }
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
serdebug = "1.0"
bincode = "1.2"
