[package]
name = "fo_save_format"
version = "0.2.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2024"

[features]
serde = ["dep:serde", "dep:serde-big-array"]
default = ["tokio"]

[dependencies]
bytemuck.workspace = true
duplicate.workspace = true
serde = { workspace = true, optional = true }
serde-big-array = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
ron.workspace = true
serde_json.workspace = true

[workspace]
members = ["cli"]

[workspace.dependencies]
bytemuck = { version = "1.22", features = [
    "derive",
    "min_const_generics",
    "extern_crate_alloc",
    "must_cast",
] }
duplicate = "2"
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
tokio = { version = "1", default-features = false }
