[package]
name = "fo_client_converter"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
ron = {version = "0.5.1", git = "https://github.com/torkleyy/ron.git", branch = "nmb"}
fo_save_format = {path = "../"}
